--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-section{
-    margin-top: 10rem;
-}
-
-div{
-    margin-top: auto;
-}
 
 h2{
     margin-top: 5rem;
@@ -23,6 +16,7 @@ input {
   }
 
   #listaDeTreinamentos {
+    font-family: 'Raleway';
     margin-left: 25rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -30,11 +24,15 @@ input {
 }
 
     #listaDeColaboradores {
+    font-family: 'Raleway';
+    font-size: 20px;
     margin-left: 25rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1.2rem;
 }
+
+
 
 form{
     
@@ -61,3 +59,29 @@ form{
     
 }
 }
+
+input:invalid {
+    border-color: #900;
+    background-color: #fdd;
+  }
+  
+  input:focus:invalid {
+    outline: none;
+  }
+
+  .error {
+    width: 100%;
+    padding: 0;
+  
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+  
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  .error.active {
+    padding: 0.3em;
+  }
